# aeos-platform

./: .dockerignore  .eslintrc.base.js  .gitignore  .npmrc  CLAUDE.md  README.md  claude-code-setup-prompt.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-images.yml  ci-infra.yml  ci-openapi.yml  ci-packages.yml  ci-recommendations.yml  ci-service-template.yml  ci-telemetry.yml  ci-web.yml  release.yml  security-scan.yml
apps/api-docs/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/: CLAUDE.md  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: plan.md
docs/architecture/: canonical-data-model.md  deployment-modes.md  dns-and-tls.md  multi-tenancy.md  overview.md  service-map.md
docs/guides/: consuming-auth.md  consuming-event-bus.md  consuming-registries.md  ledgerrow-contract.md  new-service-in-repo.md  new-service-separate-repo.md  operating-recommendations.md  operating-telemetry.md  operating-web.md  test-case-generator.md  uop-import-export.md
docs/runbooks/: local-dev-setup.md  staging-deploy.md
infra/: CLAUDE.md
infra/scripts/: bootstrap-aws-prereqs.sh  bootstrap-cluster.sh  build-push-images.sh  create-tenant.sh
local-dev/: .env.example  docker-compose.override.yml  docker-compose.yml  fresh-start.sh  init-db.sql  init-localstack.sh  nginx-local.conf  otel-collector-config.yaml  sample-uops.json  seed-all.sh
local-dev/agent-samples/: README.md
local-dev/seed/: kafka-topics.sh  seed-openfga.ts  seed-registries.ts  seed-spans.ts  seed-telemetry-token.ts  seed-tenant.ts
research/onet-spike/: .env.example  .gitignore  CLAUDE.md  README.md
scripts/: serve-docs.sh
sdk/: CLAUDE.md
sdk/adapters/crewai/: pyproject.toml
sdk/adapters/crewai/src/aeos_crewai_adapter/: __init__.py  adapter.py
sdk/cli/: package.json
services/_template-py/: .env.example  CLAUDE.md  (+1 more)
services/recommendations/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
services/recommendations/alembic/: env.py
services/recommendations/alembic/versions/: 0001_create_recommendations.py
services/recommendations/helm/: Chart.yaml  values-non-prod.yaml  values.yaml
services/recommendations/src/: config.py  main.py
services/recommendations/src/api/: recommendations.py
services/recommendations/src/db/: connection.py  queries.py
services/recommendations/src/lib/: consumer.py  emitter.py  templates.py
services/recommendations/tests/: conftest.py
services/recommendations/tests/integration/: test_recommendations_e2e.py
services/recommendations/tests/unit/: test_consumer.py  test_emitter.py  test_templates.py
specs/: AEOS_Functional_Technical_Requirements_v1.1.docx  FuzeBox_AEOS_Architecture_Plan_v0_6.docx
templates/new-service-repo-py/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml
templates/new-service-repo-py/.github/workflows/: ci.yml
templates/new-service-repo-py/helm/: Chart.yaml  values.yaml
templates/new-service-repo-py/src/: config.py  main.py
(+379 files in other folders)
