[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeos-service-REPLACE_ME"
version = "0.1.0"
description = "REPLACE_ME — AEOS platform service"
requires-python = ">=3.11"
dependencies = [
    "aeos-auth-client>=0.1.0",
    "aeos-canonical-schema>=0.1.0",
    "aeos-event-bus-client>=0.1.0",
    "aeos-registry-client>=0.1.0",
    "aeos-telemetry-sdk>=0.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
