[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aeos-crewai-adapter"
version = "0.1.0"
description = "AEOS Agent Adapter — CrewAI reference implementation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "FuzeBox", email = "platform@fuzebox.ai" }]
keywords = ["aeos", "crewai", "observability", "opentelemetry", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "opentelemetry-api>=1.20.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.28.0"]
dev = ["pytest>=8.0", "mypy>=1.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/aeos_crewai_adapter"]
